[gd_scene load_steps=7 format=2]

[ext_resource path="res://prefabs/broder.gd" type="Script" id=1]
[ext_resource path="res://fetbmw.wav" type="AudioStream" id=2]

[sub_resource type="CylinderShape" id=3]
radius = 0.514609

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.52549, 0.333333, 0, 1 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 0.5
bottom_radius = 0.5
radial_segments = 22

[sub_resource type="BoxShape" id=4]
extents = Vector3( 9, 1, 9 )

[node name="Broder" type="KinematicBody" groups=["Ped"]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="CollisionShape"]
mesh = SubResource( 2 )

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 4.4

[node name="VoiceArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31442, 0 )

[node name="CollisionShape" type="CollisionShape" parent="VoiceArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.992972, 0 )
shape = SubResource( 4 )

[node name="WaitTime" type="Timer" parent="."]
wait_time = 0.85
one_shot = true

[connection signal="body_entered" from="VoiceArea" to="." method="_on_VoiceArea_body_entered"]
[connection signal="body_exited" from="VoiceArea" to="." method="_on_VoiceArea_body_exited"]
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
